Bug 397227 - Reduce the effort needed to write C++ tests.  r=ted
UltraBlame original commit: 13614ada59aca20ca2a7ff6ccf9326ff2926049c

--- a/xpcom/tests/Makefile.in
+++ b/xpcom/tests/Makefile.in
@@ -467,55 +467,11 @@ TestCallTemplates
 .
 cpp
 \
-TestCOMPtr
-.
-cpp
-\
-TestCOMPtrEq
-.
-cpp
-\
-TestFactory
-.
-cpp
-\
-TestHashtables
-.
-cpp
-\
-TestID
-.
-cpp
-\
 TestINIParser
 .
 cpp
 \
-TestObserverService
-.
-cpp
-\
-TestServMgr
-.
-cpp
-\
-TestAutoPtr
-.
-cpp
-\
 TestVersionComparator
-.
-cpp
-\
-TestTextFormatter
-.
-cpp
-\
-TestPipe
-.
-cpp
-\
-TestPipes
 .
 cpp
 \
@@ -524,10 +480,6 @@ TestRacingServiceManager
 cpp
 \
 TestRegistrationOrder
-.
-cpp
-\
-TestProxies
 .
 cpp
 \
@@ -552,15 +504,84 @@ CPPSRCS
 +
 =
 \
-TestArray
-.
-cpp
-\
-TestTArray
-.
-cpp
-\
 TestAtoms
+.
+cpp
+\
+TestPermanentAtoms
+.
+cpp
+\
+(
+NULL
+)
+endif
+SIMPLE_PROGRAMS
+:
+=
+(
+CPPSRCS
+:
+.
+cpp
+=
+(
+BIN_SUFFIX
+)
+)
+CPP_UNIT_TESTS
+=
+\
+TestAutoPtr
+.
+cpp
+\
+TestCOMPtr
+.
+cpp
+\
+TestCOMPtrEq
+.
+cpp
+\
+TestFactory
+.
+cpp
+\
+TestHashtables
+.
+cpp
+\
+TestID
+.
+cpp
+\
+TestObserverService
+.
+cpp
+\
+TestPipe
+.
+cpp
+\
+TestServMgr
+.
+cpp
+\
+TestTextFormatter
+.
+cpp
+\
+(
+NULL
+)
+ifndef
+MOZ_ENABLE_LIBXUL
+CPP_UNIT_TESTS
++
+=
+\
+TestArray
 .
 cpp
 \
@@ -576,7 +597,15 @@ TestEncoding
 .
 cpp
 \
-TestPermanentAtoms
+TestExpirationTracker
+.
+cpp
+\
+TestPipes
+.
+cpp
+\
+TestProxies
 .
 cpp
 \
@@ -604,7 +633,7 @@ TestStorageStream
 .
 cpp
 \
-TestExpirationTracker
+TestTArray
 .
 cpp
 \
@@ -614,7 +643,7 @@ NULL
 endif
 ifndef
 MOZILLA_INTERNAL_API
-CPPSRCS
+CPP_UNIT_TESTS
 +
 =
 \
@@ -626,18 +655,6 @@ cpp
 NULL
 )
 endif
-SIMPLE_PROGRAMS
-=
-(
-CPPSRCS
-:
-.
-cpp
-=
-(
-BIN_SUFFIX
-)
-)
 include
 (
 topsrcdir
@@ -668,21 +685,6 @@ xpcomglue_s
 LIB_SUFFIX
 )
 endif
-LIBS
-+
-=
-\
-(
-XPCOM_LIBS
-)
-\
-(
-NSPR_LIBS
-)
-\
-(
-NULL
-)
 #
 Needed
 to
@@ -713,88 +715,6 @@ ENABLE_CXX_EXCEPTIONS
 XPCSHELL_TESTS
 =
 unit
-CPP_UNIT_TESTS
-=
-\
-TestAutoPtr
-\
-TestCOMPtr
-\
-TestCOMPtrEq
-\
-TestFactory
-\
-TestHashtables
-\
-TestID
-\
-TestObserverService
-\
-TestPipe
-\
-TestPipes
-\
-TestRacingServiceManager
-\
-TestServMgr
-\
-TestTextFormatter
-\
-TestThreadPoolListener
-\
-TestTimers
-\
-(
-NULL
-)
-ifndef
-MOZ_ENABLE_LIBXUL
-CPP_UNIT_TESTS
-+
-=
-\
-TestArray
-\
-TestAutoLock
-\
-TestCRT
-\
-TestEncoding
-\
-TestExpirationTracker
-\
-TestProxies
-\
-TestThreads
-\
-TestThreadPool
-\
-TestXPIDLString
-\
-TestDeque
-\
-TestStrings
-\
-TestStorageStream
-\
-TestTArray
-\
-(
-NULL
-)
-endif
-ifndef
-MOZILLA_INTERNAL_API
-CPP_UNIT_TESTS
-+
-=
-\
-TestStringAPI
-\
-(
-NULL
-)
-endif
 #
 Make
 sure
@@ -867,6 +787,56 @@ DIST
 bin
 /
 res
+#
+Copy
+TestHarness
+.
+h
+into
+its
+own
+module
+for
+ease
+of
+setting
+up
+includes
+#
+correctly
+.
+export
+:
+:
+(
+NSINSTALL
+)
+-
+D
+(
+DIST
+)
+/
+include
+/
+testing
+(
+INSTALL
+)
+(
+srcdir
+)
+/
+TestHarness
+.
+h
+(
+DIST
+)
+/
+include
+/
+testing
 install
 :
 :
@@ -993,67 +963,6 @@ TestVersionComparator
 BIN_SUFFIX
 )
 "
-echo
-"
-Running
-nsTextFormatter
-tests
-"
-(
-RUN_TEST_PROGRAM
-)
-(
-FINAL_TARGET
-)
-/
-TestTextFormatter
-(
-BIN_SUFFIX
-)
-(
-EXIT_ON_ERROR
-)
-\
-for
-f
-in
-(
-CPP_UNIT_TESTS
-)
-;
-do
-\
-echo
-Running
-f
-;
-\
-XPCOM_DEBUG_BREAK
-=
-stack
--
-and
--
-abort
-(
-RUN_TEST_PROGRAM
-)
-(
-DIST
-)
-/
-bin
-/
-f
-;
-\
-echo
-Finished
-running
-f
-;
-\
-done
 echo
 "
 Running
