--- a/gfx/cairo/libpixman/src/Makefile.in
+++ b/gfx/cairo/libpixman/src/Makefile.in
@@ -519,6 +519,18 @@ OS_TEST
 )
 )
 )
+ifeq
+(
+64
+(
+findstring
+64
+(
+OS_TEST
+)
+)
+)
+else
 USE_MMX
 =
 1
@@ -528,6 +540,7 @@ USE_SSE2
 1
 MMX_CFLAGS
 =
+endif
 endif
 endif
 ifdef
