Bug 465498 - HTML5 <audio>: setting 'currentTime' throws exception sometimes; r+sr=roc
UltraBlame original commit: cb9da8789fcee38f3471863bc87b6c4ac3274ff3

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -452,6 +452,10 @@ test_bug461281
 .
 html
 \
+test_bug465498
+.
+html
+\
 test_constants
 .
 html
@@ -545,6 +549,10 @@ test_wav_8bit
 html
 \
 test_wav_ended1
+.
+html
+\
+test_wav_onloadedmetadata
 .
 html
 \
