--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -2440,97 +2440,6 @@ stage
 (
 UNMAKE_PACKAGE
 )
-ifdef
-MOZ_PKG_PRETTYNAMES
-ifneq
-(
-(
-filter
-WINNT
-Linux
-(
-OS_ARCH
-)
-)
-)
-#
-Linux
-and
-Windows
-unpack
-to
-a
-directory
-named
-after
-the
-MOZ_APP_NAME
-#
-they
-were
-built
-with
-.
-This
-is
-fine
-when
-when
-MOZ_PKG_PRETTYNAMES
-#
-isn
-'
-t
-defined
-because
-MOZ_PKG_APPNAME
-will
-be
-the
-same
-as
-MOZ_APP_NAME
-.
-#
-However
-when
-MOZ_PKG_PRETTYNAMES
-is
-passed
-MOZ_PKG_APPNAME
-inherits
-#
-from
-MOZ_PKG_DISPLAYNAME
-which
-is
-not
-always
-the
-same
-as
-MOZ_APP_NAME
-.
-cd
-(
-DIST
-)
-/
-l10n
--
-stage
-&
-&
-\
-mv
-(
-MOZ_APP_NAME
-)
-(
-MOZ_PKG_APPNAME
-)
-endif
-endif
 make
 clobber
 -
@@ -2844,67 +2753,6 @@ stage
 (
 MAKE_PACKAGE
 )
-ifdef
-MOZ_MAKE_COMPLETE_MAR
-(
-MAKE
-)
--
-C
-(
-DEPTH
-)
-/
-tools
-/
-update
--
-packaging
-full
--
-update
-AB_CD
-=
-(
-AB_CD
-)
-\
-MOZ_PKG_PRETTYNAMES
-=
-(
-MOZ_PKG_PRETTYNAMES
-)
-\
-STAGEDIST
-=
-"
-(
-_ABS_DIST
-)
-/
-install
-"
-\
-PACKAGE_BASE_DIR
-=
-"
-(
-_ABS_DIST
-)
-/
-l10n
--
-stage
-"
-\
-DIST
-=
-"
-(
-_ABS_DIST
-)
-"
-endif
 #
 packaging
 done
@@ -3267,6 +3115,53 @@ Alter
 it
 with
 caution
+.
+#
+#
+Note
+:
+the
+last
+target
+called
+here
+should
+be
+repackage
+-
+zip
+-
+*
+as
+the
+l10n
+build
+#
+systems
+rely
+on
+dist
+/
+l10n
+-
+stage
+/
+<
+product
+>
+to
+be
+in
+place
+in
+order
+to
+package
+#
+the
+complete
+MAR
+files
 .
 installers
 -
