[OS/2] Bug 460247: move the OS/2 README.txt files out of the locale directories (mozilla-central part), r=ted
UltraBlame original commit: 4f38214f17c016f99fd9a2bab6e37d78240bc7c9

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -1029,26 +1029,6 @@ js
 ;
 \
 fi
-ifeq
-(
-(
-OS_ARCH
-)
-OS2
-)
-README_FILES
-=
-\
-os2
-/
-README
-.
-txt
-\
-(
-NULL
-)
-else
 README_FILES
 =
 \
@@ -1059,7 +1039,6 @@ txt
 (
 NULL
 )
-endif
 PROFILE_FILES
 =
 \
@@ -1202,6 +1181,13 @@ file
 \
 done
 else
+ifneq
+(
+(
+OS_ARCH
+)
+OS2
+)
 (
 SYSINSTALL
 )
@@ -1212,6 +1198,7 @@ IFLAGS1
 (
 FINAL_TARGET
 )
+endif
 endif
 libs
 :
