bug 464376 - Fire media progress events as needed - r+sr=roc
UltraBlame original commit: 34f6eb1300f1df8e52e7479b67e5b373706424fe

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -484,6 +484,14 @@ test_paused
 .
 html
 \
+test_progress1
+.
+html
+\
+test_progress2
+.
+html
+\
 test_readyState
 .
 html
@@ -567,6 +575,10 @@ ogg
 seek
 .
 ogg
+\
+big
+.
+wav
 \
 r11025_s16_c1
 .
