Bug 449754 - Ogg Theora backend for HTML5 video element failed to compile/work on Solaris; Don't use asm() on solaris; r=chris.double sr=roc
UltraBlame original commit: 917509259a362a7c35511c5471d3f9ed0596d1f4

--- a/media/libtheora/lib/Makefile.in
+++ b/media/libtheora/lib/Makefile.in
@@ -457,6 +457,13 @@ OS_ARCH
 )
 WINNT
 )
+ifneq
+(
+(
+OS_ARCH
+)
+SunOS
+)
 DEFINES
 +
 =
@@ -464,6 +471,7 @@ DEFINES
 DOC_X86ASM
 -
 DUSE_ASM
+endif
 endif
 endif
 VPATH
