Bug 465592 - To enable PGO on Thunderbird a module in the Mozilla core needs to have PGO disabled; r=ted.mielczarek
UltraBlame original commit: fc579917e321374433e182aae2d45a33af4673dc

--- a/modules/lcms/src/Makefile.in
+++ b/modules/lcms/src/Makefile.in
@@ -496,6 +496,27 @@ VISIBILITY_FLAGS
 endif
 endif
 #
+Disable
+PGO
+for
+this
+module
+in
+non
+-
+libxul
+builds
+where
+it
+breaks
+.
+ifndef
+MOZ_ENABLE_LIBXUL
+NO_PROFILE_GUIDED_OPTIMIZE
+=
+1
+endif
+#
 LCMS
 is
 on
