Bug 461322 - Don't give executable permissions to the various icons and text files that the app/Makefile.ins incautiously $(INSTALL), r=ted
UltraBlame original commit: 0e4e8ee0391b14cb00af79cf3df7e81d42a98d10

--- a/browser/app/Makefile.in
+++ b/browser/app/Makefile.in
@@ -1018,6 +1018,40 @@ MOZ_WINCONSOLE
 0
 endif
 endif
+#
+This
+switches
+(
+INSTALL
+)
+to
+copy
+mode
+like
+(
+SYSINSTALL
+)
+so
+things
+that
+#
+shouldn
+'
+t
+get
+755
+perms
+need
+(
+IFLAGS1
+)
+for
+either
+way
+of
+caling
+nsinstall
+.
 NSDISTMODE
 =
 copy
@@ -1743,6 +1777,9 @@ ICON_FILES
 (
 INSTALL
 )
+(
+IFLAGS1
+)
 ^
 (
 DIST
@@ -1786,6 +1823,9 @@ libs
 INSTALL
 )
 (
+IFLAGS1
+)
+(
 DIST
 )
 /
@@ -1809,6 +1849,9 @@ default
 INSTALL
 )
 (
+IFLAGS1
+)
+(
 DIST
 )
 /
@@ -1830,6 +1873,9 @@ icons
 default
 (
 INSTALL
+)
+(
+IFLAGS1
 )
 (
 DIST
@@ -2260,6 +2306,9 @@ js
 (
 INSTALL
 )
+(
+IFLAGS1
+)
 ^
 (
 DIST
@@ -2282,6 +2331,9 @@ blocklist
 xml
 (
 INSTALL
+)
+(
+IFLAGS1
 )
 ^
 (
@@ -3078,6 +3130,9 @@ LICENSE
 else
 (
 INSTALL
+)
+(
+IFLAGS1
 )
 (
 topsrcdir
