--- a/xulrunner/app/Makefile.in
+++ b/xulrunner/app/Makefile.in
@@ -830,6 +830,40 @@ DMOZ_WINCONSOLE
 (
 MOZ_WINCONSOLE
 )
+#
+This
+switches
+(
+INSTALL
+)
+to
+copy
+mode
+like
+(
+SYSINSTALL
+)
+so
+things
+that
+#
+shouldn
+'
+t
+get
+755
+perms
+need
+(
+IFLAGS1
+)
+for
+either
+way
+of
+calling
+nsinstall
+.
 NSDISTMODE
 =
 copy
@@ -1334,7 +1368,10 @@ libs
 ICON_FILES
 )
 (
-SYSINSTALL
+INSTALL
+)
+(
+IFLAGS1
 )
 ^
 (
@@ -1379,6 +1416,9 @@ libs
 INSTALL
 )
 (
+IFLAGS1
+)
+(
 DIST
 )
 /
@@ -1402,6 +1442,9 @@ default
 INSTALL
 )
 (
+IFLAGS1
+)
+(
 DIST
 )
 /
@@ -1423,6 +1466,9 @@ icons
 default
 (
 INSTALL
+)
+(
+IFLAGS1
 )
 (
 DIST
@@ -2078,7 +2124,10 @@ libs
 :
 :
 (
-SYSINSTALL
+INSTALL
+)
+(
+IFLAGS1
 )
 (
 README_FILE
@@ -2089,7 +2138,10 @@ DIST
 /
 bin
 (
-SYSINSTALL
+INSTALL
+)
+(
+IFLAGS1
 )
 (
 topsrcdir
