bug 466894, add mar generation into Makefile.in right before the zip staging cleanup, r=ted
UltraBlame original commit: dfbbf5cf98c2cd17376c89c0b40b9e58fc1f2ce5

--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -2740,6 +2740,57 @@ stage
 (
 MAKE_PACKAGE
 )
+ifdef
+MOZ_MAKE_COMPLETE_MAR
+(
+MAKE
+)
+-
+C
+(
+DEPTH
+)
+/
+tools
+/
+update
+-
+packaging
+full
+-
+update
+AB_CD
+=
+(
+AB_CD
+)
+\
+MOZ_PKG_PRETTYNAMES
+=
+(
+MOZ_PKG_PRETTYNAMES
+)
+\
+PACKAGE_BASE_DIR
+=
+"
+(
+_ABS_DIST
+)
+/
+l10n
+-
+stage
+"
+\
+DIST
+=
+"
+(
+_ABS_DIST
+)
+"
+endif
 #
 packaging
 done
@@ -3102,53 +3153,6 @@ Alter
 it
 with
 caution
-.
-#
-#
-Note
-:
-the
-last
-target
-called
-here
-should
-be
-repackage
--
-zip
--
-*
-as
-the
-l10n
-build
-#
-systems
-rely
-on
-dist
-/
-l10n
--
-stage
-/
-<
-product
->
-to
-be
-in
-place
-in
-order
-to
-package
-#
-the
-complete
-MAR
-files
 .
 installers
 -
