Bug 463339: Have js/src use symlinks when installing in dist. r=bsmedberg
A directory's 'libs' target should create symlinks in the top-level
dist/bin and dist/lib directories to the libraries (and any other
generated files) in the build tree, so that when one has changed
sources in $src/js/src, simply running 'make' in $obj/js/src and then
re-running $obj/dist/bin/firefox will pick up the new libraries.

The js/src/Makefile.in 'install' target has many double-colon rules
with commands; we'd like to use these all in two circumstances:

. For 'make install' in a stand-alone js/src build.  Since we're
  following GNU behavior, this should copy the files it's installing.

. For 'make libs' in an in-tree js/src build.  To interact properly
  with the rest of the Mozilla build system, this should create
  symlinks as explained above.

To accomplish this, we use plain old $(INSTALL) in all the install
targets, have js/src/Makefile.in set NSDISTMODE to copy (to get the
GNU behavior), and then have config/js/Makefile.in override that (to
get the Mozilla in-tree behavior).

UltraBlame original commit: 1fa974797b0c530594df2a34c8a646477a6cddba

--- a/config/js/Makefile.in
+++ b/config/js/Makefile.in
@@ -545,6 +545,34 @@ lib
 '
 directory
 .
+Setting
+JS_MOZ_INSTALL
+=
+ensures
+that
+#
+we
+get
+symlinks
+(
+the
+proper
+in
+-
+tree
+build
+behavior
+)
+not
+copies
+(
+the
+#
+default
+GNU
+behavior
+)
+.
 export
 :
 :
@@ -556,6 +584,9 @@ C
 (
 JS_OBJDIR
 )
+JS_MOZ_INSTALL
+=
+t
 install
 (
 MAKE
@@ -565,6 +596,9 @@ C
 (
 JS_OBJDIR
 )
+JS_MOZ_INSTALL
+=
+t
 install
 -
 runtime
