--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -420,6 +420,56 @@ config
 autoconf
 .
 mk
+ifndef
+JS_MOZ_INSTALL
+#
+This
+is
+the
+appropriate
+behavior
+for
+GNU
+-
+style
+'
+make
+install
+'
+.
+For
+#
+Mozilla
+in
+-
+tree
+behavior
+leaving
+NSDISTMODE
+unset
+is
+the
+right
+#
+thing
+;
+config
+/
+js
+/
+Makefile
+.
+in
+sets
+JS_MOZ_INSTALL
+in
+that
+case
+.
+NSDISTMODE
+=
+copy
+endif
 MODULE
 =
 js
@@ -3598,7 +3648,7 @@ install
 INSTALLED_HEADERS
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS1
@@ -3621,7 +3671,7 @@ SCRIPTS
 PROGRAM
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS2
@@ -3694,7 +3744,7 @@ LIBRARY
 )
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS1
@@ -3713,7 +3763,7 @@ SHARED_LIBRARY
 )
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS2
@@ -3732,7 +3782,7 @@ IMPORT_LIBRARY
 )
 )
 (
-SYSINSTALL
+INSTALL
 )
 (
 IFLAGS2
