bug 465329 - sync to breakpad revision 299 (just the breakpad changes). r=bsmedberg
UltraBlame original commit: 7aa964f60934c55c5bcead514a92f93e2427ea72

--- a/toolkit/crashreporter/google-breakpad/src/client/windows/handler/exception_handler.vcproj
+++ b/toolkit/crashreporter/google-breakpad/src/client/windows/handler/exception_handler.vcproj
@@ -279,6 +279,23 @@ Name
 "
 VCLibrarianTool
 "
+AdditionalDependencies
+=
+"
+crash_generation
+.
+lib
+"
+AdditionalLibraryDirectories
+=
+"
+.
+.
+\
+(
+ConfigurationName
+)
+"
 /
 >
 <
@@ -507,6 +524,23 @@ Name
 =
 "
 VCLibrarianTool
+"
+AdditionalDependencies
+=
+"
+crash_generation
+.
+lib
+"
+AdditionalLibraryDirectories
+=
+"
+.
+.
+\
+(
+ConfigurationName
+)
 "
 /
 >
@@ -747,6 +781,23 @@ Name
 "
 VCLibrarianTool
 "
+AdditionalDependencies
+=
+"
+crash_generation
+.
+lib
+"
+AdditionalLibraryDirectories
+=
+"
+.
+.
+\
+(
+ConfigurationName
+)
+"
 /
 >
 <
@@ -975,6 +1026,23 @@ Name
 =
 "
 VCLibrarianTool
+"
+AdditionalDependencies
+=
+"
+crash_generation
+.
+lib
+"
+AdditionalLibraryDirectories
+=
+"
+.
+.
+\
+(
+ConfigurationName
+)
 "
 /
 >
