--- a/toolkit/crashreporter/google-breakpad/src/client/windows/crash_generation/crash_generation.vcproj
+++ b/toolkit/crashreporter/google-breakpad/src/client/windows/crash_generation/crash_generation.vcproj
@@ -1372,6 +1372,35 @@ h
 File
 >
 <
+File
+RelativePath
+=
+"
+.
+.
+\
+.
+.
+\
+.
+.
+\
+common
+\
+windows
+\
+string_utils
+-
+inl
+.
+h
+"
+>
+<
+/
+File
+>
+<
 /
 Filter
 >
