bug 465329 - sync to breakpad revision 299 (just the mozilla changes). r=bsmedberg
UltraBlame original commit: 681b46e69db218090bb5211360c7db584009e0f9

--- a/toolkit/crashreporter/Makefile.in
+++ b/toolkit/crashreporter/Makefile.in
@@ -446,6 +446,7 @@ WINNT
 DIRS
 +
 =
+\
 google
 -
 breakpad
@@ -465,6 +466,32 @@ src
 client
 /
 windows
+/
+handler
+\
+google
+-
+breakpad
+/
+src
+/
+client
+/
+windows
+/
+sender
+\
+google
+-
+breakpad
+/
+src
+/
+client
+/
+windows
+/
+crash_generation
 \
 (
 NULL
