--- a/toolkit/crashreporter/google-breakpad/src/client/windows/crash_generation/Makefile.in
+++ b/toolkit/crashreporter/google-breakpad/src/client/windows/crash_generation/Makefile.in
@@ -155,16 +155,9 @@ Original
 Code
 is
 #
-Ted
-Mielczarek
-<
-ted
-.
-mielczarek
-gmail
-.
-com
->
+The
+Mozilla
+Foundation
 #
 Portions
 created
@@ -177,7 +170,7 @@ Copyright
 (
 C
 )
-2007
+2008
 #
 the
 Initial
@@ -194,6 +187,17 @@ Contributor
 s
 )
 :
+#
+Ted
+Mielczarek
+<
+ted
+.
+mielczarek
+gmail
+.
+com
+>
 #
 #
 Alternatively
@@ -426,12 +430,14 @@ config
 autoconf
 .
 mk
-HOST_PROGRAM
+MODULE
 =
-dump_syms
+crash_generation
+LIBRARY_NAME
+=
+crash_generation_s
 LOCAL_INCLUDES
 =
-\
 -
 I
 (
@@ -446,148 +452,54 @@ srcdir
 /
 .
 .
-\
--
-I
-(
-srcdir
-)
-/
-.
-.
-/
-.
-.
-/
-.
-.
-/
-common
-/
-mac
-\
-(
-NULL
-)
-HOST_CMMSRCS
-=
-\
-dump_syms_tool
-.
-mm
-\
-(
-NULL
-)
-HOST_LIBS
+DEFINES
 +
 =
-\
-(
-DEPTH
-)
-/
-toolkit
-/
-crashreporter
-/
-google
 -
-breakpad
-/
-src
-/
-common
-/
-mac
-/
-(
-LIB_PREFIX
-)
-host_breakpad_mac_common_s
-.
-(
-LIB_SUFFIX
-)
-\
-(
-DEPTH
-)
-/
-toolkit
-/
-crashreporter
-/
-google
+DUNICODE
 -
-breakpad
-/
-src
-/
-common
-/
-mac
-/
-dwarf
-/
-(
-LIB_PREFIX
-)
-host_breakpad_mac_dwarf_s
+D_UNICODE
+#
+XXX
+:
+We
+'
+re
+not
+currently
+building
+the
+other
+parts
+#
+which
+would
+only
+be
+needed
+on
+the
+server
+side
+of
+the
+equation
 .
-(
-LIB_SUFFIX
-)
-\
-(
-DEPTH
-)
-/
-toolkit
-/
-crashreporter
-/
-google
--
-breakpad
-/
-src
-/
-common
-/
-(
-LIB_PREFIX
-)
-host_breakpad_common_s
-.
-(
-LIB_SUFFIX
-)
-\
-(
-NULL
-)
-HOST_LDFLAGS
-+
+CPPSRCS
 =
 \
--
-framework
-Foundation
-\
--
-lcrypto
+crash_generation_client
+.
+cc
 \
 (
 NULL
 )
 #
-force
-C
-+
-+
-linking
-CPP_PROG_LINK
+need
+static
+lib
+FORCE_STATIC_LIB
 =
 1
 include
