--- a/toolkit/crashreporter/google-breakpad/src/common/mac/dwarf/Makefile.in
+++ b/toolkit/crashreporter/google-breakpad/src/common/mac/dwarf/Makefile.in
@@ -155,16 +155,9 @@ Original
 Code
 is
 #
-Ted
-Mielczarek
-<
-ted
-.
-mielczarek
-gmail
-.
-com
->
+The
+Mozilla
+Foundation
 #
 Portions
 created
@@ -177,7 +170,7 @@ Copyright
 (
 C
 )
-2006
+2008
 #
 the
 Initial
@@ -194,6 +187,17 @@ Contributor
 s
 )
 :
+#
+Ted
+Mielczarek
+<
+ted
+.
+mielczarek
+gmail
+.
+com
+>
 #
 #
 Alternatively
@@ -404,6 +408,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -423,10 +430,60 @@ config
 autoconf
 .
 mk
-DIRS
+MODULE
 =
-handler
-sender
+breakpad_mac_dwarf
+HOST_LIBRARY_NAME
+=
+host_breakpad_mac_dwarf_s
+LOCAL_INCLUDES
+=
+-
+I
+(
+srcdir
+)
+/
+.
+.
+/
+.
+.
+/
+.
+.
+HOST_CPPSRCS
+=
+\
+bytereader
+.
+cc
+\
+dwarf2reader
+.
+cc
+\
+functioninfo
+.
+cc
+\
+(
+NULL
+)
+HOST_CXXFLAGS
++
+=
+-
+funsigned
+-
+char
+#
+need
+static
+lib
+FORCE_STATIC_LIB
+=
+1
 include
 (
 topsrcdir
