--- a/toolkit/xre/Makefile.in
+++ b/toolkit/xre/Makefile.in
@@ -933,6 +933,35 @@ breakpad
 /
 src
 /
+client
+/
+windows
+/
+crash_generation
+/
+(
+LIB_PREFIX
+)
+crash_generation_s
+.
+(
+LIB_SUFFIX
+)
+\
+(
+DEPTH
+)
+/
+toolkit
+/
+crashreporter
+/
+google
+-
+breakpad
+/
+src
+/
 common
 /
 windows
