Disable the outparams warning "written on NS_FAILED"... we should focus first on the "not written on NS_SUCCEEDED" warnings, which are generally more serious. No bug, NPODB, CLOSED TREE a=johnath
UltraBlame original commit: 29f1fa84f8fd739b81e39335776d64f2d8de8a89

--- a/xpcom/tests/static-checker/Makefile.in
+++ b/xpcom/tests/static-checker/Makefile.in
@@ -506,15 +506,7 @@ e1
 .
 cpp
 \
-e2
-.
-cpp
-\
 e4
-.
-cpp
-\
-e5
 .
 cpp
 \
@@ -547,6 +539,20 @@ e12
 cpp
 \
 e13
+.
+cpp
+\
+(
+NULL
+)
+OUTPARAMS_NS_FAILED_TESTCASES
+=
+\
+e2
+.
+cpp
+\
+e5
 .
 cpp
 \
@@ -672,6 +678,10 @@ NULL
 )
 STATIC_PASS_TESTCASES
 =
+\
+(
+OUTPARAMS_NS_FAILED_TESTCASES
+)
 \
 (
 OUTPARAMS_PASS_TESTCASES
