Bug 461542 - consolidate the (unix) start scripts for our applications; mozilla-central patch v3; r=benjamin
UltraBlame original commit: 72a4c2b4e1608f743e71f09565e52e98c2b34f8e

--- a/xulrunner/app/Makefile.in
+++ b/xulrunner/app/Makefile.in
@@ -1223,6 +1223,14 @@ OS_ARCH
 xulrunner
 :
 :
+(
+topsrcdir
+)
+/
+build
+/
+unix
+/
 mozilla
 .
 in
@@ -1243,7 +1251,7 @@ MOZAPPDIR
 %
 |
 (
-mozappdir
+installdir
 )
 |
 "
@@ -1270,11 +1278,11 @@ e
 s
 |
 %
-MREDIR
+MOZ_APP_DISPLAYNAME
 %
 |
 (
-mredir
+MOZ_APP_DISPLAYNAME
 )
 |
 "
