--- a/browser/app/Makefile.in
+++ b/browser/app/Makefile.in
@@ -1624,6 +1624,14 @@ MOZ_APP_NAME
 )
 :
 :
+(
+topsrcdir
+)
+/
+build
+/
+unix
+/
 mozilla
 .
 in
@@ -1645,6 +1653,21 @@ MOZAPPDIR
 |
 (
 installdir
+)
+|
+"
+\
+-
+e
+"
+s
+|
+%
+MOZ_APP_DISPLAYNAME
+%
+|
+(
+MOZ_APP_DISPLAYNAME
 )
 |
 "
