--- a/configure.in
+++ b/configure.in
@@ -36696,6 +36696,8 @@ MOZ_ENABLE_XREMOTE
 1
 USE_ELF_DYNSTR_GC
 =
+NS_PRINTING
+=
 AC_DEFINE
 (
 MOZ_X11
@@ -41524,6 +41526,40 @@ NS_PRINTING
 =
 1
 )
+if
+test
+"
+MOZ_WIDGET_TOOLKIT
+"
+=
+=
+"
+qt
+"
+;
+then
+AC_MSG_WARN
+(
+[
+Printing
+does
+not
+work
+with
+Qt
+at
+this
+time
+.
+Omitting
+printing
+support
+.
+]
+)
+NS_PRINTING
+=
+fi
 if
 test
 "
