Bug 463648: Pass absolute path to js/src/configure --with-sync-build-files. r=bsmedberg
UltraBlame original commit: 6c75d8666e90ed0db7dd32d5dc0554ae1e5fd270

--- a/configure.in
+++ b/configure.in
@@ -1373,9 +1373,7 @@ SQLITE_VERSION
 .
 6
 .
-6
-.
-2
+4
 MSMANIFEST_TOOL
 =
 dnl
@@ -2355,41 +2353,6 @@ in
 *
 wince
 )
-MOZ_ARG_WITH_STRING
-(
-wince
--
-sdk
-[
--
--
-with
--
-wince
--
-sdk
-=
-WINCE_SDK
-The
-path
-to
-the
-windows
-mobile
-sdk
-]
-WINCE_SDK
-=
-withval
-)
-export
-WINCE
-=
-1
-mk_add_options
-WINCE
-=
-1
 echo
 -
 -
@@ -2478,32 +2441,87 @@ and
 Tool
 Chain
 echo
-Using
-SDK
-in
-:
-echo
-WINCE_SDK
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
+-
 ac_exeext
 =
 .
 exe
-rm
--
-f
-srcdir
-/
-build
-/
-wince
-/
-shunt
-/
-include
-/
-windows
-.
-h
 echo
 -
 n
@@ -2569,56 +2587,6 @@ build
 wince
 /
 tools
-echo
-"
-#
-include
-\
-"
-WINCE_SDK
-/
-windows
-.
-h
-\
-"
-"
->
-srcdir
-/
-build
-/
-wince
-/
-shunt
-/
-include
-/
-windows
-.
-h
-echo
-"
-#
-define
-GetProcAddress
-GetProcAddressA
-"
->
->
-srcdir
-/
-build
-/
-wince
-/
-shunt
-/
-include
-/
-windows
-.
-h
 echo
 -
 -
@@ -34756,6 +34724,8 @@ MOZ_IMG_ENCODERS_DEFAULT
 png
 jpeg
 "
+MOZ_IPCD
+=
 MOZ_JAVAXPCOM
 =
 MOZ_JSDEBUGGER
@@ -34815,6 +34785,9 @@ MOZ_PREF_EXTENSIONS
 =
 1
 MOZ_PROFILELOCKING
+=
+1
+MOZ_PROFILESHARING
 =
 1
 MOZ_PSM
@@ -35198,6 +35171,8 @@ MOZ_PREF_EXTENSIONS
 =
 MOZ_PROFILELOCKING
 =
+MOZ_PROFILESHARING
+=
 MOZ_SPELLCHECK
 =
 MOZ_SVG
@@ -35309,6 +35284,8 @@ MOZ_PLUGINS
 MOZ_PREF_EXTENSIONS
 =
 MOZ_PROFILELOCKING
+=
+MOZ_PROFILESHARING
 =
 MOZ_SPELLCHECK
 =
@@ -35898,6 +35875,8 @@ MOZ_XUL_APP
 "
 ;
 then
+MOZ_PROFILESHARING
+=
 AC_DEFINE
 (
 MOZ_XUL_APP
@@ -36342,6 +36321,18 @@ _DEFAULT_TOOLKIT
 "
 cairo
 -
+mac
+"
+\
+-
+o
+"
+_DEFAULT_TOOLKIT
+"
+=
+"
+cairo
+-
 cocoa
 "
 then
@@ -36696,8 +36687,6 @@ MOZ_ENABLE_XREMOTE
 1
 USE_ELF_DYNSTR_GC
 =
-NS_PRINTING
-=
 AC_DEFINE
 (
 MOZ_X11
@@ -36779,8 +36768,25 @@ MOZ_CAIRO_LIBS
 ;
 cairo
 -
+mac
+|
+cairo
+-
 cocoa
 )
+if
+test
+"
+MOZ_WIDGET_TOOLKIT
+"
+=
+"
+cairo
+-
+cocoa
+"
+;
+then
 MOZ_WIDGET_TOOLKIT
 =
 cocoa
@@ -36791,6 +36797,11 @@ MOZ_WIDGET_COCOA
 MOZ_ENABLE_COCOA
 =
 1
+else
+MOZ_WIDGET_TOOLKIT
+=
+mac
+fi
 MOZ_GFX_TOOLKIT
 =
 cairo
@@ -40216,144 +40227,6 @@ dnl
 =
 dnl
 =
-Disable
-building
-dbm
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-MOZ_ARG_DISABLE_BOOL
-(
-dbm
-[
--
--
-disable
--
-dbm
-Disable
-building
-dbm
-]
-NSS_DISABLE_DBM
-=
-1
-NSS_DISABLE_DBM
-=
-)
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-dnl
-=
 Open
 JVM
 Interface
@@ -41526,40 +41399,6 @@ NS_PRINTING
 =
 1
 )
-if
-test
-"
-MOZ_WIDGET_TOOLKIT
-"
-=
-=
-"
-qt
-"
-;
-then
-AC_MSG_WARN
-(
-[
-Printing
-does
-not
-work
-with
-Qt
-at
-this
-time
-.
-Omitting
-printing
-support
-.
-]
-)
-NS_PRINTING
-=
-fi
 if
 test
 "
@@ -67272,6 +67111,296 @@ dnl
 dnl
 disable
 profile
+sharing
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_DISABLE_BOOL
+(
+profilesharing
+[
+-
+-
+disable
+-
+profilesharing
+Disable
+profile
+sharing
+]
+MOZ_PROFILESHARING
+=
+MOZ_PROFILESHARING
+=
+1
+)
+if
+test
+"
+MOZ_PROFILESHARING
+"
+;
+then
+MOZ_IPCD
+=
+1
+AC_DEFINE
+(
+MOZ_PROFILESHARING
+)
+fi
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+enable
+ipc
+/
+ipcd
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+MOZ_ARG_ENABLE_BOOL
+(
+ipcd
+[
+-
+-
+enable
+-
+ipcd
+Enable
+IPC
+daemon
+]
+MOZ_IPCD
+=
+1
+MOZ_IPCD
+=
+)
+dnl
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+=
+dnl
+disable
+profile
 locking
 dnl
 do
@@ -68625,7 +68754,15 @@ JAR
 )
 AC_SUBST
 (
+MOZ_PROFILESHARING
+)
+AC_SUBST
+(
 MOZ_PROFILELOCKING
+)
+AC_SUBST
+(
+MOZ_IPCD
 )
 AC_SUBST
 (
@@ -68770,10 +68907,6 @@ MOZ_TIMELINE
 AC_SUBST
 (
 WINCE
-)
-AC_SUBST
-(
-WINCE_SDK
 )
 AC_SUBST
 (
@@ -69006,10 +69139,6 @@ NSS_DEP_LIBS
 AC_SUBST
 (
 MOZ_NATIVE_NSS
-)
-AC_SUBST
-(
-NSS_DISABLE_DBM
 )
 AC_SUBST
 (
@@ -71606,7 +71735,7 @@ build
 -
 files
 =
-srcdir
+_topsrcdir
 "
 if
 test
