--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -420,56 +420,6 @@ config
 autoconf
 .
 mk
-ifndef
-JS_MOZ_INSTALL
-#
-This
-is
-the
-appropriate
-behavior
-for
-GNU
--
-style
-'
-make
-install
-'
-.
-For
-#
-Mozilla
-in
--
-tree
-behavior
-leaving
-NSDISTMODE
-unset
-is
-the
-right
-#
-thing
-;
-config
-/
-js
-/
-Makefile
-.
-in
-sets
-JS_MOZ_INSTALL
-in
-that
-case
-.
-NSDISTMODE
-=
-copy
-endif
 MODULE
 =
 js
@@ -678,6 +628,15 @@ MOZ_BITS
 (
 VERSION_NUMBER
 )
+RESFILE
+=
+js
+(
+MOZ_BITS
+)
+40
+.
+res
 endif
 #
 JavaScript
@@ -1184,6 +1143,10 @@ jsscope
 h
 \
 jsscript
+.
+h
+\
+jsstaticcheck
 .
 h
 \
@@ -3032,6 +2995,102 @@ JSCPUCFG_DEFINES
 (
 ACDEFINES
 )
+#
+This
+is
+incredibly
+hacky
+.
+Darwin
+NSPR
+uses
+the
+same
+MDCPUCFG
+for
+multiple
+#
+processors
+and
+determines
+which
+processor
+to
+configure
+for
+based
+on
+#
+#
+ifdef
+i386
+.
+This
+macro
+is
+among
+the
+NSPR
+defines
+but
+is
+also
+automatically
+#
+defined
+by
+the
+compiler
+when
+building
+for
+i386
+.
+It
+therefore
+needs
+to
+be
+#
+defined
+here
+if
+targeting
+i386
+and
+explicitly
+undefined
+otherwise
+.
+ifeq
+(
+(
+OS_ARCH
+)
+Darwin
+)
+ifeq
+(
+(
+TARGET_CPU
+)
+powerpc
+)
+JSCPUCFG_DEFINES
++
+=
+-
+Ui386
+else
+JSCPUCFG_DEFINES
++
+=
+-
+Di386
+=
+1
+endif
+endif
 endif
 ifeq
 (
@@ -3648,7 +3707,7 @@ install
 INSTALLED_HEADERS
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS1
@@ -3671,7 +3730,7 @@ SCRIPTS
 PROGRAM
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS2
@@ -3744,7 +3803,7 @@ LIBRARY
 )
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS1
@@ -3763,7 +3822,7 @@ SHARED_LIBRARY
 )
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS2
@@ -3782,7 +3841,7 @@ IMPORT_LIBRARY
 )
 )
 (
-INSTALL
+SYSINSTALL
 )
 (
 IFLAGS2
