bug 461979, make profile info easier to localize, r=ted
UltraBlame original commit: 5ef605914426a0f5ed7d3353f4481a028bcfe880

--- a/browser/locales/generic/profile/bookmarks.html.in
+++ b/browser/locales/generic/profile/bookmarks.html.in
@@ -1,3 +1,6 @@
+#
+filter
+substitution
 <
 !
 DOCTYPE
@@ -62,7 +65,7 @@ UTF
 <
 TITLE
 >
-Bookmarks
+bookmarks_title
 <
 /
 TITLE
@@ -70,7 +73,7 @@ TITLE
 <
 H1
 >
-Bookmarks
+bookmarks_heading
 <
 /
 H1
@@ -93,10 +96,6 @@ https
 :
 /
 /
-en
--
-US
-.
 add
 -
 ons
@@ -105,9 +104,7 @@ mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -309,11 +306,7 @@ rdf
 CnoJ1
 "
 >
-Get
-Bookmark
-Add
--
-ons
+bookmarks_addons
 <
 /
 A
@@ -340,9 +333,7 @@ rdf
 FvPhC3
 "
 >
-Bookmarks
-Toolbar
-Folder
+bookmarks_toolbarfolder
 <
 /
 H3
@@ -350,19 +341,7 @@ H3
 <
 DD
 >
-Add
-bookmarks
-to
-this
-folder
-to
-see
-them
-displayed
-on
-the
-Bookmarks
-Toolbar
+bookmarks_toolbarfolder_description
 <
 DL
 >
@@ -381,75 +360,18 @@ http
 :
 /
 /
-en
--
-US
-.
 www
 .
 mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
 central
 /
-"
-ICON
-=
-"
-data
-:
-image
-/
-png
-;
-base64
-iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8
-/
-9hAAAABGdBTUEAAK
-/
-INwWK6QAAABl0RVh0U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAHWSURBVHjaYvz
-/
-/
-z8DJQAggJiQOe
-/
-fv2fv7Oz8rays
-/
-N
-+
-VkfG
-/
-iYnJfyD
-/
-1
-+
-rVq7ffu3dPFpsBAAHEAHIBCJ85c8bN2Nj4vwsDw
-/
-8zQLwKiO8CcRoQu0DxqlWrdsHUwzBAAIGJmTNnPgYa9j8UqhFElwPxf2MIDeIrKSn9FwSJoRkAEEAM0DD4DzMAyPi
-/
-G
-+
-QKY4hh5WAXGf8PDQ0FGwJ22d27CjADAAIIrLmjo
-+
-MXA9R2kAHvGBA2wwx6B8W7od6CeQcggKCmCEL8bgwxYCbUIGTDVkHDBia
-+
-CuotgACCueD3TDQN75D4xmAvCoK9ARMHBzAw0AECiBHkAlC0Mdy7x9ABNA3obAZXIAa6iKEcGlMVQHwWyjYuL2d4v2cPg8vZswx7gHyAAAK7AOif7SAbOqCmn4Ha3AHFsIDtgPq
-/
-vLz8P4MSkJ2W9h8ggBjevXvHDo4FQUQg
-/
-kdypqCg4H8lUIACnQ
-/
-SOBMYI8bAsAJFPcj1AAEEjwVQqLpAbXmH5BJjqI0gi9DTAAgDBBCcAVLkgmQ7yKCZxpCQxqUZhAECCJ4XgMl493ug21ZD
-+
-aDAXH0WLM4A9MZPXJkJIIAwTAR5pQMalaCABQUULttBGCCAGCnNzgABBgAMJ5THwGvJLAAAAABJRU5ErkJggg
-=
-=
 "
 ID
 =
@@ -460,8 +382,7 @@ rdf
 GvPhC3
 "
 >
-Getting
-Started
+getting_started
 <
 /
 A
@@ -478,9 +399,7 @@ http
 :
 /
 /
-en
--
-US
+AB_CD
 .
 fxfeeds
 .
@@ -488,9 +407,7 @@ mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -504,9 +421,7 @@ http
 :
 /
 /
-en
--
-US
+AB_CD
 .
 fxfeeds
 .
@@ -514,9 +429,7 @@ mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -533,8 +446,7 @@ rdf
 HvPhC3
 "
 >
-Latest
-Headlines
+latest_headlines
 <
 /
 A
@@ -563,8 +475,7 @@ rdf
 ZvPhC3
 "
 >
-Mozilla
-Firefox
+firefox_heading
 <
 /
 H3
@@ -587,19 +498,13 @@ http
 :
 /
 /
-en
--
-US
-.
 www
 .
 mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -666,9 +571,7 @@ rdf
 22iCK1
 "
 >
-Help
-and
-Tutorials
+firefox_help
 <
 /
 A
@@ -685,19 +588,13 @@ http
 :
 /
 /
-en
--
-US
-.
 www
 .
 mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -764,8 +661,7 @@ rdf
 32iCK1
 "
 >
-Customize
-Firefox
+firefox_customize
 <
 /
 A
@@ -782,19 +678,13 @@ http
 :
 /
 /
-en
--
-US
-.
 www
 .
 mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -861,8 +751,7 @@ rdf
 42iCK1
 "
 >
-Get
-Involved
+firefox_community
 <
 /
 A
@@ -879,19 +768,13 @@ http
 :
 /
 /
-en
--
-US
-.
 www
 .
 mozilla
 .
 com
 /
-en
--
-US
+AB_CD
 /
 firefox
 /
@@ -958,8 +841,7 @@ rdf
 52iCK1
 "
 >
-About
-Us
+firefox_about
 <
 /
 A
