--- a/browser/locales/Makefile.in
+++ b/browser/locales/Makefile.in
@@ -501,6 +501,46 @@ US
 /
 crashreporter
 endif
+ifdef
+LOCALE_MERGEDIR
+vpath
+book
+%
+.
+inc
+(
+LOCALE_MERGEDIR
+)
+/
+browser
+/
+profile
+endif
+vpath
+book
+%
+.
+inc
+(
+LOCALE_SRCDIR
+)
+/
+profile
+ifdef
+LOCALE_MERGEDIR
+vpath
+book
+%
+.
+inc
+srcdir
+/
+en
+-
+US
+/
+profile
+endif
 run_for_effects
 :
 =
@@ -1042,63 +1082,17 @@ NULL
 PROFILE_FILES
 =
 \
-bookmarks
-.
-html
-\
 localstore
+.
+rdf
+\
+mimeTypes
 .
 rdf
 \
 (
 NULL
 )
-ifeq
-(
-(
-OS_ARCH
-)
-WINNT
-)
-PROFILE_FILES
-+
-=
-win
-/
-mimeTypes
-.
-rdf
-else
-ifneq
-(
-(
-filter
-mac
-cocoa
-(
-MOZ_WIDGET_TOOLKIT
-)
-)
-)
-PROFILE_FILES
-+
-=
-mac
-/
-mimeTypes
-.
-rdf
-else
-PROFILE_FILES
-+
-=
-unix
-/
-mimeTypes
-.
-rdf
-endif
-endif
 PROFILE_CHROME
 =
 userChrome
@@ -1200,14 +1194,117 @@ FINAL_TARGET
 )
 endif
 endif
+NO_JA_JP_MAC_AB_CD
+:
+=
+(
+if
+(
+filter
+ja
+-
+JP
+-
+mac
+(
+AB_CD
+)
+)
+ja
+(
+AB_CD
+)
+)
+%
+/
+defaults
+/
+profile
+/
+bookmarks
+.
+html
+:
+bookmarks
+.
+inc
+generic
+/
+profile
+/
+bookmarks
+.
+html
+.
+in
+(
+SYSINSTALL
+)
+-
+D
+(
+dir
+)
+(
+PYTHON
+)
+(
+topsrcdir
+)
+/
+config
+/
+Preprocessor
+.
+py
+\
+-
+I
+<
+\
+-
+DAB_CD
+=
+(
+NO_JA_JP_MAC_AB_CD
+)
+\
+(
+srcdir
+)
+/
+generic
+/
+profile
+/
+bookmarks
+.
+html
+.
+in
+\
+>
+libs
+:
+:
+(
+FINAL_TARGET
+)
+/
+defaults
+/
+profile
+/
+bookmarks
+.
+html
+;
 libs
 :
 :
 (
 addprefix
-(
-LOCALE_SRCDIR
-)
+generic
 /
 profile
 /
@@ -1266,10 +1363,26 @@ install
 :
 :
 (
-addprefix
-(
-LOCALE_SRCDIR
+DESTDIR
 )
+(
+mozappdir
+)
+/
+defaults
+/
+profile
+/
+bookmarks
+.
+html
+;
+install
+:
+:
+(
+addprefix
+generic
 /
 profile
 /
@@ -1394,112 +1507,6 @@ mozappdir
 )
 /
 searchplugins
-MICROSUMMARY_GENERATORS
-=
-(
-shell
-cat
-(
-LOCALE_SRCDIR
-)
-/
-microsummary
--
-generators
-/
-list
-.
-txt
-)
-MICROSUMMARY_GENERATOR_PREFIX
-=
-(
-addprefix
-(
-LOCALE_SRCDIR
-)
-/
-microsummary
--
-generators
-/
-(
-MICROSUMMARY_GENERATORS
-)
-)
-libs
-:
-:
-ifneq
-(
-(
-strip
-(
-MICROSUMMARY_GENERATORS
-)
-)
-)
-(
-addsuffix
-.
-xml
-(
-MICROSUMMARY_GENERATOR_PREFIX
-)
-)
-(
-SYSINSTALL
-)
-(
-IFLAGS1
-)
-^
-(
-FINAL_TARGET
-)
-/
-microsummary
--
-generators
-endif
-install
-:
-:
-ifneq
-(
-(
-strip
-(
-MICROSUMMARY_GENERATORS
-)
-)
-)
-(
-addsuffix
-.
-xml
-(
-MICROSUMMARY_GENERATOR_PREFIX
-)
-)
-(
-SYSINSTALL
-)
-(
-IFLAGS1
-)
-^
-(
-DESTDIR
-)
-(
-mozappdir
-)
-/
-microsummary
--
-generators
-endif
 tests
 :
 ifneq
@@ -2484,15 +2491,7 @@ js
 RM
 )
 -
-r
-(
-STAGEDIST
-)
-/
-microsummary
--
-generators
-\
+rf
 (
 STAGEDIST
 )
