Bug 434989 - patch for FreeBSD 8-current (and after 7.0). r/sr=benjamin, patch by okazakikick.gr.jp
UltraBlame original commit: 08897e5342b42a37a0171671b84be334a72661ae

--- a/xpcom/reflect/xptcall/src/md/unix/Makefile.in
+++ b/xpcom/reflect/xptcall/src/md/unix/Makefile.in
@@ -827,6 +827,32 @@ cpp
 endif
 #
 #
+FreeBSD
+/
+amd64
+#
+ifeq
+(
+(
+OS_ARCH
+)
+(
+OS_TEST
+)
+FreeBSDx86_64
+)
+CPPSRCS
+:
+=
+xptcinvoke_amd64_linux
+.
+cpp
+xptcstubs_amd64_linux
+.
+cpp
+endif
+#
+#
 BeOS
 /
 Intel
