Bug 467677: Removed test -n "$CROSS_COMPILE".  Moved "cross_compiling=yes" to the very end of the if block so that it is not overridden by AC_PROG_CC and AC_PROG_CXX.  Removed the Mac OS X ppc<->x86 code in the "else" block.  r=jim,ted.mielczarek.
UltraBlame original commit: 70fdd41caa9f6587be419c752de593bccc9da3a8

--- a/js/src/configure.in
+++ b/js/src/configure.in
@@ -2021,82 +2021,6 @@ dnl
 =
 =
 =
-dnl
-Set
-CROSS_COMPILE
-in
-the
-environment
-when
-running
-configure
-dnl
-to
-use
-the
-cross
--
-compile
-setup
-for
-now
-dnl
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
-=
 if
 test
 "
@@ -2105,14 +2029,6 @@ COMPILE_ENVIRONMENT
 ;
 then
 if
-test
--
-n
-"
-CROSS_COMPILE
-"
-&
-&
 test
 "
 target
@@ -2133,9 +2049,6 @@ host
 to
 target
 "
-cross_compiling
-=
-yes
 _SAVE_CC
 =
 "
@@ -2857,175 +2770,65 @@ AC_DEFINE
 (
 CROSS_COMPILE
 )
-else
-case
-"
-build
-:
-target
-"
-in
-powerpc
--
-apple
--
-darwin8
-*
-:
-i
-?
-86
--
-apple
--
-darwin
-*
-)
 dnl
-The
-Darwin
+If
+we
 cross
-compiler
-doesn
-'
-t
-necessarily
-point
-itself
-at
-a
-dnl
-root
-that
-has
-libraries
+compile
 for
-the
-proper
-architecture
-it
-defaults
-dnl
-to
-the
-system
-root
-.
-The
-libraries
-in
-the
-system
-root
+ppc
 on
-current
-dnl
-versions
-of
-PPC
+Mac
 OS
 X
-10
-.
-4
-aren
-'
-t
-fat
-so
-these
-target
-compiler
-dnl
-checks
+x86
+cross_compiling
 will
-fail
-.
-Fake
-a
-working
-SDK
+dnl
+have
+erroneously
+been
+set
+to
+"
+no
+"
+because
+the
+x86
+build
+host
+is
+dnl
+able
+to
+run
+ppc
+code
 in
+a
+ranslated
+environment
+making
+a
+cross
+dnl
+compiler
+appear
+native
+.
+So
+we
+override
 that
-case
+here
 .
-_SAVE_CFLAGS
+cross_compiling
 =
-CFLAGS
-_SAVE_CXXFLAGS
-=
-CXXLAGS
-CFLAGS
-=
-"
--
-isysroot
-/
-Developer
-/
-SDKs
-/
-MacOSX10
-.
-4u
-.
-sdk
-CFLAGS
-"
-CXXFLAGS
-=
-"
--
-isysroot
-/
-Developer
-/
-SDKs
-/
-MacOSX10
-.
-4u
-.
-sdk
-CXXFLAGS
-"
-;
-;
-esac
+yes
+else
 AC_PROG_CC
 AC_PROG_CXX
-case
-"
-build
-:
-target
-"
-in
-powerpc
--
-apple
--
-darwin8
-*
-:
-i
-?
-86
--
-apple
--
-darwin
-*
-)
-CFLAGS
-=
-_SAVE_CFLAGS
-CXXFLAGS
-=
-_SAVE_CXXFLAGS
-;
-;
-esac
 AC_PROG_RANLIB
 AC_PATH_PROGS
 (
