Bug 469444 - steps.py : MozillaA11YTest misses __init__() and evaluateCommand(); (Av1) Explicitly set default leakThreshold to 0 in runtests.py.in; r=ted.mielczarek
UltraBlame original commit: 5ab9ab1f0f03e2b89ca3002c5752b02a72091101

--- a/testing/mochitest/runtests.py.in
+++ b/testing/mochitest/runtests.py.in
@@ -3752,6 +3752,29 @@ options
 leakThreshold
 =
 74000
+elif
+options
+.
+a11y
+:
+#
+We
+don
+'
+t
+leak
+running
+the
+-
+-
+a11y
+tests
+.
+options
+.
+leakThreshold
+=
+0
 else
 :
 #
