Bug 469255 - Seeking while seek in progress not handled correctly by Wave decoder; r+sr=roc
UltraBlame original commit: a993a51a86931d0637095f4ae2a0288ffe4a1077

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -556,11 +556,47 @@ test_wav_ended1
 .
 html
 \
+test_wav_seek3
+.
+html
+\
+test_wav_seek4
+.
+html
+\
+test_wav_seek5
+.
+html
+\
+test_wav_seek6
+.
+html
+\
+test_wav_seek7
+.
+html
+\
+test_wav_seek8
+.
+html
+\
 test_wav_seek_past_end
 .
 html
 \
 test_wav_seek_then_play
+.
+html
+\
+test_wav_trailing
+.
+html
+\
+test_wav_trunc
+.
+html
+\
+test_wav_trunc_seek
 .
 html
 \
@@ -577,6 +613,14 @@ seek
 ogg
 \
 r11025_s16_c1
+.
+wav
+\
+r11025_s16_c1_trailing
+.
+wav
+\
+r11025_s16_c1_trunc
 .
 wav
 \
