Bug 466405 - Ogg and Wave specific mochitests should be hidden by appropriate build-time conditional - r=ted.mielczarek
UltraBlame original commit: 64d08af481747091022b50e6ac69d563fe748191

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -444,11 +444,8 @@ rules
 mk
 _TEST_FILES
 =
-test_autoplay
-.
-html
 \
-test_bug461281
+test_autoplay
 .
 html
 \
@@ -464,7 +461,40 @@ test_currentTime
 .
 html
 \
-test_decoder_disable
+test_networkState
+.
+html
+\
+test_paused
+.
+html
+\
+test_readyState
+.
+html
+\
+test_seek2
+.
+html
+\
+test_volume
+.
+html
+\
+(
+NULL
+)
+ifdef
+MOZ_OGG
+_TEST_FILES
++
+=
+\
+test_bug448534
+.
+html
+\
+test_bug461281
 .
 html
 \
@@ -480,27 +510,11 @@ test_ended2
 .
 html
 \
-test_networkState
-.
-html
-\
 test_onloadedmetadata
 .
 html
 \
-test_paused
-.
-html
-\
-test_readyState
-.
-html
-\
 test_seek1
-.
-html
-\
-test_seek2
 .
 html
 \
@@ -544,9 +558,27 @@ test_timeupdate3
 .
 html
 \
-test_volume
+320x240
 .
-html
+ogg
+\
+bug461281
+.
+ogg
+\
+seek
+.
+ogg
+\
+(
+NULL
+)
+endif
+ifdef
+MOZ_WAVE
+_TEST_FILES
++
+=
 \
 test_wav_8bit
 .
@@ -600,18 +632,6 @@ test_wav_trunc_seek
 .
 html
 \
-320x240
-.
-ogg
-\
-bug461281
-.
-ogg
-\
-seek
-.
-ogg
-\
 r11025_s16_c1
 .
 wav
@@ -628,14 +648,27 @@ r11025_u8_c1
 .
 wav
 \
-#
-test_bug448534
+(
+NULL
+)
+endif
+ifdef
+MOZ_OGG
+ifdef
+MOZ_WAVE
+_TEST_FILES
++
+=
+\
+test_decoder_disable
 .
 html
 \
 (
 NULL
 )
+endif
+endif
 libs
 :
 :
