--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -580,6 +580,10 @@ _TEST_FILES
 +
 =
 \
+test_bug463162
+.
+xhtml
+\
 test_wav_8bit
 .
 html
@@ -661,6 +665,10 @@ _TEST_FILES
 =
 \
 test_decoder_disable
+.
+html
+\
+test_media_selection
 .
 html
 \
