--- a/layout/inspector/tests/Makefile.in
+++ b/layout/inspector/tests/Makefile.in
@@ -158,9 +158,8 @@ Original
 Code
 is
 #
-Netscape
-Communications
-Corporation
+Mozilla
+Foundation
 .
 #
 Portions
@@ -174,7 +173,7 @@ Copyright
 (
 C
 )
-1998
+2008
 #
 the
 Initial
@@ -387,6 +386,12 @@ DEPTH
 =
 .
 .
+/
+.
+.
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -396,6 +401,13 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+layout
+/
+inspector
+/
+tests
 include
 (
 DEPTH
@@ -406,143 +418,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-layout
-PARALLEL_DIRS
-=
-\
-style
-\
-base
-\
-generic
-\
-forms
-\
-tables
-\
-xul
-/
-base
-/
-public
-\
-xul
-/
-base
-/
-src
-\
-(
-NULL
-)
-ifdef
-NS_PRINTING
-PARALLEL_DIRS
-+
-=
-printing
-endif
-ifdef
-MOZ_MATHML
-PARALLEL_DIRS
-+
-=
-\
-mathml
-/
-content
-/
-src
-\
-mathml
-/
-base
-/
-src
-\
-(
-NULL
-)
-endif
-ifdef
-MOZ_SVG
-PARALLEL_DIRS
-+
-=
-svg
-/
-base
-/
-src
-endif
-ifndef
-MOZ_NO_INSPECTOR_APIS
-PARALLEL_DIRS
-+
-=
-inspector
-/
-public
-inspector
-/
-src
-ifdef
-ENABLE_TESTS
-PARALLEL_DIRS
-+
-=
-inspector
-/
-tests
-endif
-endif
-DIRS
-+
-=
-build
-ifdef
-ENABLE_TESTS
-PARALLEL_DIRS
-+
-=
-\
-xul
-/
-test
-\
-xul
-/
-base
-/
-test
-\
-(
-NULL
-)
-TOOL_DIRS
-+
-=
-tools
-/
-reftest
-DIRS
-+
-=
-tools
-/
-pageloader
-ifndef
-MOZ_ENABLE_LIBXUL
-TOOL_DIRS
-+
-=
-html
-/
-tests
-endif
-endif
 include
 (
 topsrcdir
@@ -553,3 +428,38 @@ config
 rules
 .
 mk
+_TEST_FILES
+=
+\
+test_bug462787
+.
+html
+\
+(
+NULL
+)
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+^
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+tests
+/
+(
+relativesrcdir
+)
