Add a system for testing plugins. b=386676 r=smichaud sr=roc
UltraBlame original commit: 2776db2defa2ff4cf12f0942da2617983f5225f0

--- a/modules/plugin/test/mochitest/Makefile.in
+++ b/modules/plugin/test/mochitest/Makefile.in
@@ -157,9 +157,10 @@ the
 Original
 Code
 is
-mozilla
+#
+Mozilla
+Foundation
 .
-org
 #
 Portions
 created
@@ -172,7 +173,7 @@ Copyright
 (
 C
 )
-2008
+2007
 #
 the
 Initial
@@ -190,24 +191,6 @@ s
 )
 :
 #
-Dave
-Townsend
-<
-dtownsend
-oxymoronical
-.
-com
->
-#
-Josh
-Aas
-<
-josh
-mozilla
-.
-com
->
-#
 #
 Alternatively
 the
@@ -224,6 +207,7 @@ terms
 of
 #
 either
+of
 the
 GNU
 General
@@ -239,8 +223,8 @@ the
 GPL
 "
 )
-or
 #
+or
 the
 GNU
 Lesser
@@ -408,6 +392,9 @@ DEPTH
 /
 .
 .
+/
+.
+.
 topsrcdir
 =
 top_srcdir
@@ -417,6 +404,13 @@ srcdir
 VPATH
 =
 srcdir
+relativesrcdir
+=
+modules
+/
+plugin
+/
+test
 include
 (
 DEPTH
@@ -427,55 +421,6 @@ config
 autoconf
 .
 mk
-MODULE
-=
-test_plugin
-DIRS
-=
-testplugin
-XPCSHELL_TESTS
-=
-\
-unit
-\
-(
-NULL
-)
-#
-plugin
-mochitests
-only
-work
-on
-UNIX
-variants
-including
-Mac
-OS
-X
-at
-this
-time
-ifneq
-(
-(
-filter
-gtk2
-cocoa
-windows
-(
-MOZ_WIDGET_TOOLKIT
-)
-)
-)
-ifdef
-ENABLE_TESTS
-DIRS
-+
-=
-mochitest
-endif
-endif
 include
 (
 topsrcdir
@@ -486,3 +431,33 @@ config
 rules
 .
 mk
+_TEST_FILES
+=
+test_npruntime
+.
+xul
+libs
+:
+:
+(
+_TEST_FILES
+)
+(
+INSTALL
+)
+^
+(
+DEPTH
+)
+/
+_tests
+/
+testing
+/
+mochitest
+/
+chrome
+/
+(
+relativesrcdir
+)
