--- a/modules/plugin/test/testplugin/Makefile.in
+++ b/modules/plugin/test/testplugin/Makefile.in
@@ -450,13 +450,60 @@ NO_DIST_INSTALL
 NO_INSTALL
 =
 1
+CPPSRCS
+=
+\
+nptest
+.
+cpp
+\
+nptest_utils
+.
+cpp
+\
+(
+NULL
+)
 ifeq
 (
 (
-OS_ARCH
+MOZ_WIDGET_TOOLKIT
 )
-WINNT
+cocoa
 )
+CMMSRCS
+=
+nptest_macosx
+.
+mm
+endif
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+gtk2
+)
+CPPSRCS
++
+=
+nptest_gtk2
+.
+cpp
+endif
+ifeq
+(
+(
+MOZ_WIDGET_TOOLKIT
+)
+windows
+)
+CPPSRCS
++
+=
+nptest_windows
+.
+cpp
 RCFILE
 =
 nptest
@@ -467,12 +514,16 @@ RESFILE
 nptest
 .
 res
-endif
-CPPSRCS
+DEFFILE
 =
+(
+win_srcdir
+)
+/
 nptest
 .
-cpp
+def
+endif
 include
 (
 topsrcdir
