Bug 468041: List the object files that depend on javascript-trace.h explicitly. r=bsmedberg
It seems gratuitous to rebuild every object file when
javascript-trace.h changes.

UltraBlame original commit: 5748936939f4ba914ae1739dc23364e37448baa6

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -4044,18 +4044,37 @@ javascript
 trace
 .
 h
-(
-CPPSRCS
-:
-%
+#
+We
+can
+'
+t
+automatically
+generate
+dependencies
+on
+auto
+-
+generated
+headers
+;
+#
+we
+have
+to
+list
+them
+explicitly
 .
-cpp
-=
-%
+(
+addsuffix
 .
 (
 OBJ_SUFFIX
 )
+jsdtracef
+jsinterp
+jsobj
 )
 :
 (
