Backed out changeset 2776db2defa2
UltraBlame original commit: 85ba55beac88bec1575a6ce9b3f6f0f88c8bd818

--- a/modules/plugin/test/testplugin/Makefile.in
+++ b/modules/plugin/test/testplugin/Makefile.in
@@ -450,60 +450,13 @@ NO_DIST_INSTALL
 NO_INSTALL
 =
 1
-CPPSRCS
-=
-\
-nptest
-.
-cpp
-\
-nptest_utils
-.
-cpp
-\
-(
-NULL
-)
 ifeq
 (
 (
-MOZ_WIDGET_TOOLKIT
+OS_ARCH
 )
-cocoa
+WINNT
 )
-CMMSRCS
-=
-nptest_macosx
-.
-mm
-endif
-ifeq
-(
-(
-MOZ_WIDGET_TOOLKIT
-)
-gtk2
-)
-CPPSRCS
-+
-=
-nptest_gtk2
-.
-cpp
-endif
-ifeq
-(
-(
-MOZ_WIDGET_TOOLKIT
-)
-windows
-)
-CPPSRCS
-+
-=
-nptest_windows
-.
-cpp
 RCFILE
 =
 nptest
@@ -514,16 +467,12 @@ RESFILE
 nptest
 .
 res
-DEFFILE
+endif
+CPPSRCS
 =
-(
-win_srcdir
-)
-/
 nptest
 .
-def
-endif
+cpp
 include
 (
 topsrcdir
