Bug 469247. Implement 'canPlayType' API for video/audio elements. r=doublec,r+sr=bzbarsky
UltraBlame original commit: 8ffb3d8bd8b8a7d8541c735f57464029e2eb7eac

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -445,7 +445,19 @@ mk
 _TEST_FILES
 =
 \
+can_play_type_ogg
+.
+js
+\
+can_play_type_wave
+.
+js
+\
 test_autoplay
+.
+html
+\
+test_can_play_type
 .
 html
 \
@@ -495,6 +507,10 @@ test_bug448534
 html
 \
 test_bug461281
+.
+html
+\
+test_can_play_type_ogg
 .
 html
 \
@@ -573,6 +589,18 @@ ogg
 (
 NULL
 )
+else
+_TEST_FILES
++
+=
+\
+test_can_play_type_no_ogg
+.
+html
+\
+(
+NULL
+)
 endif
 ifdef
 MOZ_WAVE
@@ -583,6 +611,10 @@ _TEST_FILES
 test_bug463162
 .
 xhtml
+\
+test_can_play_type_wave
+.
+html
 \
 test_wav_8bit
 .
@@ -651,6 +683,18 @@ wav
 r11025_u8_c1_trunc
 .
 wav
+\
+(
+NULL
+)
+else
+_TEST_FILES
++
+=
+\
+test_can_play_type_no_wave
+.
+html
 \
 (
 NULL
