--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -530,6 +530,10 @@ test_onloadedmetadata
 .
 html
 \
+test_progress1
+.
+html
+\
 test_seek1
 .
 html
@@ -608,6 +612,10 @@ _TEST_FILES
 +
 =
 \
+big
+.
+wav
+\
 test_bug463162
 .
 xhtml
@@ -621,6 +629,10 @@ test_wav_8bit
 html
 \
 test_wav_ended1
+.
+html
+\
+test_progress2
 .
 html
 \
