Bug 463830. Make the window title for standalone video/audio documents be useful. r+sr=roc
UltraBlame original commit: b873bd70913fab19b7c629901c3e1511ad8d1e7a

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -578,9 +578,13 @@ test_timeupdate3
 .
 html
 \
+test_videoDocumentTitle
+.
+html
+\
 320x240
 .
-ogg
+ogv
 \
 bug461281
 .
@@ -588,7 +592,7 @@ ogg
 \
 seek
 .
-ogg
+ogv
 \
 (
 NULL
@@ -611,6 +615,10 @@ MOZ_WAVE
 _TEST_FILES
 +
 =
+\
+test_audioDocumentTitle
+.
+html
 \
 big
 .
