Backed out changeset 1a4e7f55120d
UltraBlame original commit: f8f4b9b50a9cd9476462c1eabf5588d6e4ea3e86

--- a/content/media/video/test/Makefile.in
+++ b/content/media/video/test/Makefile.in
@@ -530,10 +530,6 @@ test_onloadedmetadata
 .
 html
 \
-test_progress1
-.
-html
-\
 test_seek1
 .
 html
@@ -578,13 +574,9 @@ test_timeupdate3
 .
 html
 \
-test_videoDocumentTitle
-.
-html
-\
 320x240
 .
-ogv
+ogg
 \
 bug461281
 .
@@ -592,7 +584,7 @@ ogg
 \
 seek
 .
-ogv
+ogg
 \
 (
 NULL
@@ -616,14 +608,6 @@ _TEST_FILES
 +
 =
 \
-test_audioDocumentTitle
-.
-html
-\
-big
-.
-wav
-\
 test_bug463162
 .
 xhtml
@@ -637,10 +621,6 @@ test_wav_8bit
 html
 \
 test_wav_ended1
-.
-html
-\
-test_progress2
 .
 html
 \
