Bug 441782 - bidi.numerals == 4 does not switch numeric shapes in content; r,sr=roc
UltraBlame original commit: 54d08b93e78bc06e8731bcc1e2eebe215af9e7d7

--- a/layout/base/tests/Makefile.in
+++ b/layout/base/tests/Makefile.in
@@ -640,6 +640,114 @@ See
 bug
 407080
 )
+#
+Tests
+for
+bug
+441782
+don
+'
+t
+pass
+reliably
+on
+Windows
+because
+of
+bug
+469208
+ifneq
+(
+(
+filter
+windows
+(
+MOZ_WIDGET_TOOLKIT
+)
+)
+)
+_TEST_FILES
++
+=
+\
+test_bug441782
+.
+html
+\
+bug441782
+-
+1
+.
+html
+\
+bug441782
+-
+1
+-
+ref
+.
+html
+\
+bug441782
+-
+2
+.
+html
+\
+bug441782
+-
+2
+-
+ref
+.
+html
+\
+bug441782
+-
+3
+.
+html
+\
+bug441782
+-
+3
+-
+ref
+.
+html
+\
+bug441782
+-
+4
+.
+html
+\
+bug441782
+-
+4
+-
+ref
+.
+html
+\
+bug441782
+-
+5
+.
+html
+\
+bug441782
+-
+5
+-
+ref
+.
+html
+\
+(
+NULL
+)
+endif
 libs
 :
 :
