Bug 469870: Upgraded nsprpub to NSPR_HEAD_20081216.  r=kaie.
UltraBlame original commit: 0e61b5765cd30cf7840c5ed28b2a076c7e0ce436

--- a/nsprpub/config/Makefile.in
+++ b/nsprpub/config/Makefile.in
@@ -767,6 +767,19 @@ TARGETS
 PROGS
 )
 else
+ifeq
+(
+(
+OS_ARCH
+)
+WINCE
+)
+TARGETS
+=
+(
+PROGS
+)
+else
 PROGS
 +
 =
@@ -791,6 +804,7 @@ pl
 =
 )
 endif
+endif
 OUTOPTION
 =
 -
@@ -808,6 +822,7 @@ filter
 out
 WINNT
 WIN95
+WINCE
 (
 OS_TARGET
 )
