--- a/nsprpub/configure.in
+++ b/nsprpub/configure.in
@@ -587,7 +587,7 @@ MOD_MINOR_VERSION
 7
 MOD_PATCH_VERSION
 =
-2
+4
 NSPR_MODNAME
 =
 nspr20
@@ -2866,6 +2866,9 @@ cygwin
 *
 |
 mingw
+*
+|
+wince
 *
 |
 os2
@@ -5262,6 +5265,14 @@ OS_ARCH
 WINNT
 ;
 ;
+wince
+*
+)
+OS_ARCH
+=
+WINCE
+;
+;
 darwin
 *
 )
@@ -6619,6 +6630,11 @@ msvc
 *
 -
 mks
+*
+|
+*
+-
+wince
 *
 )
 NSINSTALL
@@ -11842,6 +11858,123 @@ fi
 ;
 *
 -
+wince
+*
+)
+AC_DEFINE
+(
+XP_PC
+)
+AC_DEFINE
+(
+WIN32
+)
+AC_DEFINE
+(
+WINCE
+)
+AC_DEFINE
+(
+_PR_GLOBAL_THREADS_ONLY
+)
+AR
+=
+'
+lib
+-
+NOLOGO
+-
+OUT
+:
+"
+"
+'
+AR_FLAGS
+=
+OBJ_SUFFIX
+=
+obj
+LIB_SUFFIX
+=
+lib
+DLL_SUFFIX
+=
+dll
+MKSHLIB
+=
+'
+(
+LD
+)
+-
+DLL
+(
+DSO_LDOPTS
+)
+-
+OUT
+:
+'
+PR_MD_ARCH_DIR
+=
+windows
+RESOLVE_LINK_SYMBOLS
+=
+1
+MDCPUCFG_H
+=
+_win95
+.
+cfg
+LIBNSPR
+=
+'
+(
+dist_libdir
+)
+/
+nspr
+(
+MOD_MAJOR_VERSION
+)
+.
+(
+LIB_SUFFIX
+)
+'
+LIBPLC
+=
+'
+(
+dist_libdir
+)
+/
+plc
+(
+MOD_MAJOR_VERSION
+)
+.
+(
+LIB_SUFFIX
+)
+'
+DLLFLAGS
+=
+'
+-
+OUT
+:
+"
+"
+'
+_DEBUG_FLAGS
+=
+-
+Zi
+;
+;
+*
+-
 ncr
 -
 sysv
@@ -12059,9 +12192,19 @@ AC_DEFINE
 (
 HAVE_BSD_FLOCK
 )
+if
+test
+-
+z
+"
 USE_NSPR_THREADS
+"
+;
+then
+USE_PTHREADS
 =
 1
+fi
 MDCPUCFG_H
 =
 _netbsd
@@ -13461,6 +13604,48 @@ o
 RESOLVE_LINK_SYMBOLS
 =
 1
+case
+"
+{
+OS_RELEASE
+}
+"
+in
+5
+.
+8
+|
+5
+.
+9
+)
+;
+;
+*
+)
+#
+It
+is
+safe
+to
+use
+the
+-
+Bdirect
+linker
+flag
+on
+Solaris
+10
+or
+later
+.
+USE_B_DIRECT
+=
+1
+;
+;
+esac
 if
 test
 -
@@ -13527,9 +13712,24 @@ defs
 -
 z
 ignore
+'
+if
+test
+-
+n
+"
+USE_B_DIRECT
+"
+;
+then
+DSO_LDOPTS
+=
+"
+DSO_LDOPTS
 -
 Bdirect
-'
+"
+fi
 else
 DSO_CFLAGS
 =
@@ -13554,9 +13754,24 @@ defs
 -
 z
 ignore
+'
+if
+test
+-
+n
+"
+USE_B_DIRECT
+"
+;
+then
+DSO_LDOPTS
+=
+"
+DSO_LDOPTS
 -
 Bdirect
-'
+"
+fi
 fi
 if
 test
@@ -17479,6 +17694,11 @@ mks
 |
 *
 -
+wince
+*
+|
+*
+-
 os2
 *
 |
@@ -17489,6 +17709,7 @@ beos
 )
 dnl
 win32
+wince
 os2
 &
 beos
