--- a/nsprpub/pr/include/md/_darwin.cfg
+++ b/nsprpub/pr/include/md/_darwin.cfg
@@ -452,17 +452,8 @@ AF_INET6
 *
 /
 #
-if
-defined
-(
-__i386__
-)
-|
-|
-defined
-(
-__x86_64__
-)
+ifdef
+__LITTLE_ENDIAN__
 #
 undef
 IS_BIG_ENDIAN
