System for testing plugins, take 2. b=386676 r=smichaud sr=roc
UltraBlame original commit: 7b8ca8c944f20845d229938cd3d42a026f4a6f12

--- a/content/base/test/Makefile.in
+++ b/content/base/test/Makefile.in
@@ -1189,10 +1189,6 @@ test_bug453521
 .
 html
 \
-test_bug391728
-.
-html
-\
 file_bug391728
 .
 html
@@ -1384,6 +1380,29 @@ html
 bug444546
 .
 sjs
+\
+#
+Disabled
+because
+of
+a
+leak
+that
+occurs
+when
+the
+test
+plugin
+can
+actually
+load
+#
+instances
+.
+#
+test_bug391728
+.
+html
 \
 libs
 :
